--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
            
             <p>Se que apenas cumpliremos 10 meses juntos. </p>
             <p>Podria sonar poco, pero para mi ha sido mucho mas que suficiente para darme cuenta de que tu eres la persona a la cual le quiero entregar mi vida entera. No quiero conocer a nadie mas, solo conocerte a ti cada vez mas y enamorarme cada dia mas de ti.</p>
-            
-            <p>Te amo con todo mi corazon mi amor...
+              <p>Espero tengas un dia tan lindo como tu mi vida. </p>
+            <p>Te amo con todo mi corazon mi amor💕
         </div>
         <!-- Puedes agregar una imagen aquí -->
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTOvtgnV6jjrySxjsgMa1SXjkvOkq3gI4TaPJbiYKU&s" alt="Flor digital">
