--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Mensaje Especial</title>
+    <title>Recuerdos Especiales</title>
     <style>
-        /* Estilos CSS para dar formato al mensaje */
+        /* Estilos CSS para dar formato a la página */
         body {
             background-color: #D8BFD8; /* Color de fondo (morado claro) */
             text-align: center;
@@ -13,28 +13,24 @@
         }
 
         .container {
-            background-color: #fff; /* Fondo del mensaje */
+            background-color: #fff; /* Fondo de la página */
             border-radius: 10px; /* Esquinas redondeadas */
             box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1); /* Sombra suave */
-            max-width: 600px; /* Ancho máximo del mensaje */
-            margin: 0 auto; /* Centra el mensaje horizontalmente */
+            max-width: 800px; /* Ancho máximo de la página */
+            margin: 0 auto; /* Centra la página horizontalmente */
             padding: 20px; /* Espacio interno */
         }
 
-        .message {
-            font-size: 24px;
-            color: #333; /* Color del texto */
-            margin-bottom: 20px; /* Espacio inferior */
-            line-height: 1.5; /* Espaciado entre líneas */
+        h1 {
+            color: #FF5733; /* Color del título */
+        }
+
+        .moment {
+            margin: 20px 0;
             text-align: left; /* Alineación de texto izquierda */
         }
 
-        .heart {
-            color: #FF1493; /* Color rosa */
-            font-size: 36px; /* Tamaño del corazón */
-        }
-
-        img {
+        .moment img {
             border-radius: 10px; /* Redondea las esquinas de la imagen */
             max-width: 100%; /* Asegura que la imagen no sea más ancha que el contenedor */
         }
@@ -42,19 +38,25 @@
 </head>
 <body>
     <div class="container">
-        <div class="message">
-            <p><strong>Hola mi amor, buenos dias</strong></p>
-            <p>Quiero decirte cuanto significas para mi. Eres lo mejor que me ha pasado en la vida.</p>
-            <p>Cada dia me siento agradecido por tener una novia tan increible como tu en mi vida, me haces muy feliz y espero provocar lo mismo en ti.</p>
-            <p>Eres maravillosa, divertida, inteligente y sobre todo muy linda. Te amo como no puedes imaginar.</p>
-           
-            <p>Se que apenas cumpliremos 10 meses juntos. </p>
-            <p>Podria sonar poco, pero para mi ha sido mucho mas que suficiente para darme cuenta de que tu eres la persona a la cual le quiero entregar mi vida entera. No quiero conocer a nadie mas, solo conocerte a ti cada vez mas y enamorarme cada dia mas de ti.</p>
-              <p>Espero tengas un dia tan lindo como tu mi vida. </p>
-            <p>Te amo con todo mi corazon mi amor💕
+        <h1>Recuerdos Especiales de Juan y Aranza</h1>
+        <p>Aquí puedes encontrar momentos especiales que hemos compartido durante nuestros 10 meses juntos.</p>
+
+        <!-- Primer recuerdo -->
+        <div class="moment">
+            <h2>Momento 1</h2>
+            <p>Descripción del momento 1.</p>
+            <img src="imagen1.jpg" alt="Imagen 1">
         </div>
-        <!-- Puedes agregar una imagen aquí -->
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTOvtgnV6jjrySxjsgMa1SXjkvOkq3gI4TaPJbiYKU&s" alt="Flor digital">
+
+        <!-- Segundo recuerdo -->
+        <div class="moment">
+            <h2>Momento 2</h2>
+            <p>Descripción del momento 2.</p>
+            <img src="imagen2.jpg" alt="Imagen 2">
+        </div>
+
+        <!-- Agrega más recuerdos según sea necesario -->
+
     </div>
 </body>
 </html>
