--- a/index.html
+++ b/index.html
@@ -95,5 +95,7 @@
             showMonth(0);
         </script>
     </div>
+    <!-- Agrega la imagen "fotocarta.jpg" al mismo nivel que el archivo HTML -->
+    <img src="fotocarta.jpg" alt="Imagen de la Carta de Diciembre">
 </body>
 </html>
