--- a/index.html
+++ b/index.html
@@ -98,6 +98,6 @@
         </script>
     </div>
     <!-- Agrega la imagen "fotocarta.jpg" al mismo nivel que el archivo HTML y dale una clase -->
-    <img src="https://github.com/Juan3003-CR7/Juan3003-CR7.github.io/blob/main/fotocarta.jpg" alt="Imagen de la Carta de Diciembre" class="foto-carta">
+    <img src="https://github.com/Juan3003-CR7/Juan3003-CR7.github.io/blob/main/fotocarta.jpg" alt="Imagen" class="foto-carta">
 </body>
 </html>
