--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Recuerdos Especiales</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1"> <!-- Agregado para ajustar la escala en dispositivos móviles -->
     <style>
         /* Estilos CSS para dar formato a la página */
         body {
@@ -95,7 +96,7 @@
             showMonth(0);
         </script>
     </div>
-    <!-- Agrega la imagen "fotocarta.jpg" al mismo nivel que el archivo HTML y dale una clase -->
-    <img src="https://github.com/Juan3003-CR7/Juan3003-CR7.github.io/blob/main/fotocarta.jpg" alt="Imagen" class="foto-carta">
+    <!-- Corregida la URL de la imagen "fotocarta.jpg" -->
+    <img src="https://raw.githubusercontent.com/Juan3003-CR7/Juan3003-CR7.github.io/main/fotocarta.jpg" alt="Imagen" class="foto-carta">
 </body>
 </html>
