--- a/index.html
+++ b/index.html
@@ -97,6 +97,6 @@
         </script>
     </div>
     <!-- Corregida la URL de la imagen "fotocarta.jpg" -->
-    <img src="https://raw.githubusercontent.com/Juan3003-CR7/Juan3003-CR7.github.io/main/fotocarta.jpg" alt="Imagen" class="foto-carta">
+    <img src="https://github.com/Juan3003-CR7/Juan3003-CR7.github.io/blob/23a9c4b13ae3b2ec9a44b906ea005787bed16497/fotocarta.jpg" alt="Imagen" class="foto-carta">
 </body>
 </html>
