--- a/index.html
+++ b/index.html
@@ -97,6 +97,6 @@
         </script>
     </div>
     <!-- Corregida la URL de la imagen "fotocarta.jpg" -->
-    <img src=https://imgur.com/3W4oP1l" alt="Imagen" class="foto-carta">
+    <img src="https://imgur.com/3W4oP1l" alt="Imagen" class="foto-carta">
 </body>
 </html>
