--- a/index.html
+++ b/index.html
@@ -97,6 +97,6 @@
         </script>
     </div>
     <!-- Corregida la URL de la imagen "fotocarta.jpg" -->
-    <img src="https://i.imgur.com/VadK7Vr.jpeg" alt="Imagen" class="foto-carta">
+    <img src="https://i.imgur.com/yBl5iRP.jpg" alt="Imagen" class="foto-carta">
 </body>
 </html>
