--- a/index.html
+++ b/index.html
@@ -51,6 +51,15 @@
         .button:hover {
             background-color: #FF8657; /* Cambia el color de fondo al pasar el mouse */
         }
+
+        /* Estilos para el álbum de fotos */
+        .album {
+            display: none; /* Oculta el álbum por defecto */
+        }
+
+        .album img {
+            margin: 10px; /* Espaciado entre las imágenes del álbum */
+        }
     </style>
 </head>
 <body>
@@ -66,37 +75,14 @@
         <div id="month-display">
             <!-- El nombre del mes y las fotos se mostrarán aquí -->
         </div>
-
-        <script>
-            // Obtén todas las imágenes
-            const images = document.querySelectorAll('.moment img');
-            const monthDisplay = document.getElementById('month-display');
-
-            // Función para mostrar imágenes por mes
-            function showMonth(month) {
-                const months = ['Presentación de A&J', 'Álbum de Fotos'];
-                const monthName = months[month];
-
-                // Cambia el contenido de la sección de visualización de mes
-                monthDisplay.innerHTML = `<h2>${monthName}</h2>`;
-
-                // Oculta todas las imágenes
-                images.forEach((image) => {
-                    image.style.display = 'none';
-                });
-
-                // Muestra la imagen "fotocarta.jpg" solo en Presentación de A&J
-                if (month === 0) {
-                    const fotoCartaImage = document.querySelector('.foto-carta');
-                    fotoCartaImage.style.display = 'block';
-                }
-            }
-
-            // Muestra las imágenes de la Presentación de A&J al cargar la página
-            showMonth(0);
-        </script>
-    </div>
-    <!-- Corregida la URL de la imagen "fotocarta.jpg" -->
-    <img src="https://i.imgur.com/yBl5iRP.jpg" alt="Imagen" class="foto-carta">
-</body>
-</html>
+        <div class="album" id="album-display">
+    <!-- Imágenes del álbum se mostrarán aquí -->
+    <img src="https://i.imgur.com/3UthX4C.jpg" alt="Imagen 1">
+    <img src="https://i.imgur.com/EAJoXty.jpg" alt="Imagen 2">
+    <img src="https://i.imgur.com/UZTC8a3.jpg" alt="Imagen 3">
+    <img src="https://i.imgur.com/THFNdac.jpg" alt="Imagen 4">
+    <img src="https://i.imgur.com/8pfaaCh.jpg" alt="Imagen 5">
+    <img src="https://i.imgur.com/uXgFDkA.jpg" alt="Imagen 6">
+    <img src="https://i.imgur.com/NVQa3YO.jpg" alt="Imagen 7">
+    <img src="https://i.imgur.com/i6Vsisi.jpg" alt="Imagen 8">
+</div>
