--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
         .moment img {
             border-radius: 10px; /* Redondea las esquinas de la imagen */
             max-width: 100%; /* Asegura que la imagen no sea más ancha que el contenedor */
+            max-height: 150px; /* Altura máxima de las imágenes */
+            width: auto; /* Ajusta automáticamente el ancho */
             height: auto; /* Ajusta automáticamente la altura */
             display: block; /* Elimina el espacio vacío debajo de las imágenes */
             margin: 0 auto; /* Centra las imágenes horizontalmente */
