--- a/index.html
+++ b/index.html
@@ -31,16 +31,6 @@
             text-align: left; /* Alineación de texto izquierda */
         }
 
-        .moment img {
-            border-radius: 10px; /* Redondea las esquinas de la imagen */
-            max-width: 100%; /* Asegura que la imagen no sea más ancha que el contenedor */
-            max-height: 150px; /* Altura máxima de las imágenes */
-            width: auto; /* Ajusta automáticamente el ancho */
-            height: auto; /* Ajusta automáticamente la altura */
-            display: block; /* Elimina el espacio vacío debajo de las imágenes */
-            margin: 0 auto; /* Centra las imágenes horizontalmente */
-        }
-
         /* Estilos para los botones */
         .button {
             background-color: #FF5733; /* Color de fondo */
@@ -64,7 +54,7 @@
         }
 
         .album img {
-            max-width: 200px; /* Tamaño máximo de las imágenes */
+            max-width: 100px; /* Tamaño máximo de las imágenes */
             height: auto; /* Ajusta automáticamente la altura */
             margin: 5px; /* Espaciado entre las imágenes */
             border-radius: 10px; /* Redondea las esquinas de las imágenes */
@@ -116,7 +106,7 @@
                 const months = ['Presentación de A&J', 'Álbum de Fotos'];
                 const monthName = months[month];
 
-                // Cambia el contenido de la sección de visualización
+                // Cambia el contenido de la sección de visualización de mes
                 monthDisplay.innerHTML = `<h2>${monthName}</h2>`;
 
                 // Oculta todas las imágenes
