--- a/index.html
+++ b/index.html
@@ -1,72 +1,98 @@
-<!DOCTYPE html>
+[0:32, 3/10/2023] Juan B: <!DOCTYPE html>
 <html>
 <head>
     <title>Recuerdos Especiales</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1"> <!-- Agregado para ajustar la escala en dispositivos móviles -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
         /* Estilos CSS para dar formato a la página */
         body {
-            background-color: #D8BFD8; /* Color de fondo (morado claro) */
+            background-color: #D8BFD8;
             text-align: center;
-            font-family: 'Montserrat', sans-serif; /* Fuente personalizada */
-            margin: 0; /* Elimina los márgenes predeterminados */
-            padding: 0; /* Elimina el espacio de relleno predeterminado */
+            font-family: 'Montserrat', sans-serif;
+            margin: 0;
+            padding: 0;
         }
 
         .container {
-            background-color: #fff; /* Fondo de la página */
-            border-radius: 10px; /* Esquinas redondeadas */
-            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1); /* Sombra suave */
-            max-width: 800px; /* Ancho máximo de la página */
-            margin: 0 auto; /* Centra la página horizontalmente */
-            padding: 20px; /* Espacio interno */
+            background-color: #fff;
+            border-radius: 10px;
+            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 20px;
         }
 
         h1 {
-            color: #FF5733; /* Color del título */
+            color: #FF5733;
         }
 
         .moment {
             margin: 20px 0;
-            text-align: left; /* Alineación de texto izquierda */
+            text-align: left;
+            position: relative;
+            overflow: hidden;
         }
 
         .moment img {
-            border-radius: 10px; /* Redondea las esquinas de la imagen */
-            max-width: 100%; /* Asegura que la imagen no sea más ancha que el contenedor */
-            height: auto; /* Ajusta automáticamente la altura */
-            display: block; /* Elimina el espacio vacío debajo de las imágenes */
-            margin: 0 auto; /* Centra las imágenes horizontalmente */
+            border-radius: 10px;
+            max-width: 100%;
+            max-height: 150px;
+            width: auto;
+            height: auto;
+            display: block;
+            margin: 0 auto;
+            transition: filter 0.3s ease-in-out;
+        }
+
+        .moment:hover img {
+            filter: blur(5px);
+        }
+
+        .moment .text {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            background-color: rgba(255, 87, 51, 0.7);
+            color: #fff;
+            padding: 5px 10px;
+            border-radius: 5px;
+            opacity: 0;
+            transition: opacity 0.3s ease-in-out;
+        }
+
+        .moment:hover .text {
+            opacity: 1;
         }
 
         /* Estilos para los botones */
         .button {
-            background-color: #FF5733; /* Color de fondo */
-            color: #fff; /* Color del texto */
-            padding: 10px 20px; /* Espaciado interno */
-            border: none; /* Sin borde */
-            border-radius: 5px; /* Esquinas redondeadas */
-            cursor: pointer; /* Cursor de puntero al pasar el mouse */
-            margin: 5px; /* Espaciado entre botones */
-            font-size: 18px; /* Tamaño de fuente */
+            background-color: #FF5733;
+            color: #fff;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            margin: 5px;
+            font-size: 18px;
         }
 
         .button:hover {
-            background-color: #FF8657; /* Cambia el color de fondo al pasar el mouse */
+            background-color: #FF8657;
         }
 
         /* Estilos para el álbum de fotos */
         .album {
-            display: none; /* Oculta el álbum por defecto */
-            text-align: center; /* Alineación de imágenes en el centro */
+            display: none;
+            text-align: center;
         }
 
         .album img {
-            max-width: 200px; /* Tamaño máximo de las imágenes */
-            height: auto; /* Ajusta automáticamente la altura */
-            margin: 5px; /* Espaciado entre las imágenes */
-            border-radius: 10px; /* Redondea las esquinas de las imágenes */
-            display: inline-block; /* Permite que las imágenes estén en línea unas con otras */
+            max-width: 200px;
+            height: auto;
+            margin: 5px;
+            border-radius: 10px;
+            display: inline-block;
         }
     </style>
 </head>
@@ -78,7 +104,6 @@
         <!-- Botones con texto personalizado -->
         <button class="button" onclick="showMonth(0)">Presentación de A&J</button>
         <button class="button" onclick="showMonth(1)">Álbum de Fotos</button>
-        <!-- Agrega más botones y secciones aquí -->
         
         <div id="month-display">
             <!-- El nombre del mes y las fotos se mostrarán aquí -->
@@ -86,21 +111,173 @@
 
         <div class="album" id="album-display">
             <!-- Imágenes del álbum se mostrarán aquí -->
-            <img src="https://i.imgur.com/3UthX4C.jpg" alt="Imagen 1">
-            <img src="https://i.imgur.com/EAJoXty.jpg" alt="Imagen 2">
-            <img src="https://i.imgur.com/UZTC8a3.jpg" alt="Imagen 3">
-            <img src="https://i.imgur.com/THFNdac.jpg" alt="Imagen 4">
-            <img src="https://i.imgur.com/8pfaaCh.jpg" alt="Imagen 5">
-            <img src="https://i.imgur.com/uXgFDkA.jpg" alt="Imagen 6">
-            <img src="https://i.imgur.com/NVQa3YO.jpg" alt="Imagen 7">
-            <img src="https://i.imgur.com/i6Vsisi.jpg" alt="Imagen 8">
-            <img src="https://i.imgur.com/hUHZehn.jpg" alt="Imagen 9">
-            <img src="https://i.imgur.com/yBl5iRP.jpg" alt="Imagen 10">
-            <img src="https://i.imgur.com/NNWaMxQ.jpg" alt="Imagen 11">
-            <img src="https://i.imgur.com/0qv5c4d.jpg" alt="Imagen 12">
-            <img src="https://i.imgur.com/pIVgxGw.jpg" alt="Imagen 13">
-            <img src="https://i.imgur.com/TNicyCT.jpg" alt="Imagen 14">
-            <img src="https://i.imgur.com/GkWMgW7.jpg" alt="Imagen 15">
+            <div class="moment">
+                <img src="https://i.imgur.com/3UthX4C.jpg" alt="Imagen 1">
+                <div class="text">Texto 1</div>
+            </div>
+            <div class="moment">
+                <img src="https://i.imgur.com/EAJoXty.jpg" alt="Imagen 2">
+                <div class="text">Texto 2</div>
+            </div>
+            <div class="moment">
+                <img src="https://i.imgur.com/UZTC8a3.jpg" alt="Imagen 3">
+                <div class="text">Texto 3</div>
+            </div>
+            <!-- Agrega más imágenes con texto aquí -->
+        </div>
+
+        <script>
+            // Obtén todas las imágenes
+            const images = document.querySelectorAll('.moment img');
+            const monthDisplay = document.getElementById('month-display');
+            const albumDisplay = document.getElementById('album-display');
+
+            // Función para mostrar imágenes por mes
+            function showMonth(month) {
+                const months = ['Presentación de A&J', 'Álbum de Fotos'];
+                const monthName = months[month];
+
+                // Cambia el contenido de la sección de visualización de mes
+                monthDisplay.innerHTML = `<h2>${monthName}</h2>`;
+
+                // Muestra el álbum correspondiente
+                if (month === 0) {
+                    albumDisplay.style.display = 'none';
+                } else {
+                    albumDisplay.style.display = 'block';
+                }
+            }
+        </script>
+    </div>
+</body>
+</html>
+[0:35, 3/10/2023] Juan B: <!DOCTYPE html>
+<html>
+<head>
+    <title>Recuerdos Especiales</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <style>
+        /* Estilos CSS para dar formato a la página */
+        body {
+            background-color: #D8BFD8;
+            text-align: center;
+            font-family: 'Montserrat', sans-serif;
+            margin: 0;
+            padding: 0;
+        }
+
+        .container {
+            background-color: #fff;
+            border-radius: 10px;
+            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 20px;
+        }
+
+        h1 {
+            color: #FF5733;
+        }
+
+        .moment {
+            margin: 20px 0;
+            text-align: left;
+            position: relative;
+            display: inline-block;
+            margin-right: 10px;
+        }
+
+        .moment img {
+            border-radius: 10px;
+            max-width: 200px;
+            max-height: 150px;
+            width: auto;
+            height: auto;
+            display: block;
+            margin: 0 auto;
+            transition: filter 0.3s ease-in-out;
+        }
+
+        .moment:hover img {
+            filter: blur(5px);
+        }
+
+        .moment .text {
+            position: absolute;
+            top: -30px;
+            left: 50%;
+            transform: translateX(-50%);
+            background-color: rgba(255, 87, 51, 0.7);
+            color: #fff;
+            padding: 5px 10px;
+            border-radius: 5px;
+            opacity: 0;
+            transition: opacity 0.3s ease-in-out;
+        }
+
+        .moment:hover .text {
+            opacity: 1;
+        }
+
+        /* Estilos para los botones */
+        .button {
+            background-color: #FF5733;
+            color: #fff;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            margin: 5px;
+            font-size: 18px;
+        }
+
+        .button:hover {
+            background-color: #FF8657;
+        }
+
+        /* Estilos para el álbum de fotos */
+        .album {
+            display: none;
+            text-align: center;
+        }
+
+        .album img {
+            max-width: 200px;
+            height: auto;
+            margin: 5px;
+            border-radius: 10px;
+            display: inline-block;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <h1>Recuerdos Especiales de Juan y Aranza</h1>
+        <p>Aquí puedes encontrar momentos especiales que hemos compartido durante nuestros 10 meses juntos.</p>
+
+        <!-- Botones con texto personalizado -->
+        <button class="button" onclick="showMonth(0)">Presentación de A&J</button>
+        <button class="button" onclick="showMonth(1)">Álbum de Fotos</button>
+        
+        <div id="month-display">
+            <!-- El nombre del mes y las fotos se mostrarán aquí -->
+        </div>
+
+        <div class="album" id="album-display">
+            <!-- Imágenes del álbum se mostrarán aquí -->
+            <div class="moment">
+                <img src="https://i.imgur.com/3UthX4C.jpg" alt="Imagen 1">
+                <div class="text">Recuerdo 1</div>
+            </div>
+            <div class="moment">
+                <img src="https://i.imgur.com/EAJoXty.jpg" alt="Imagen 2">
+                <div class="text">El dia que adoptamos a nuestro hijo, pato</div>
+            </div>
+            <div class="moment">
+                <img src="https://i.imgur.com/UZTC8a3.jpg" alt="Imagen 3">
+                <div class="text">Recuerdo 3</div>
+            </div>
+            <!-- Agrega más imágenes con texto aquí -->
         </div>
 
         <script>
