--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
             <!-- Imágenes del álbum se mostrarán aquí -->
             <div class="moment">
                 <img src="https://i.imgur.com/3UthX4C.jpg" alt="Imagen 1">
-                <div class="text">Recuerdo 1</div>
+                <div class="text">Uno de nuestros primeros besos</div>
             </div>
             <div class="moment">
                 <img src="https://i.imgur.com/EAJoXty.jpg" alt="Imagen 2">
